Updated 538 chart with class note code

--- a/538 Example.Rmd
+++ b/538 Example.Rmd
@@ -17,4 +17,13 @@ library(gov.1005.data)
 data("congress")
 head(congress)
 congress %>% arrange(desc(age))
+
+ages <- congress%>%
+filter(party %in% c("R", "D")) %>%
+group_by(year, party) %>%
+summarize(avgAge=mean(age))
+
+ggplot(ages, aes(year,avgAge, color=party))+geom_line()
+
+
 ```
